crates/config/tests/snapshots/block_string_0_literal_clip_emptyln_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-clip-emptyln-dedent

## Input

```mical
key |

other val

```

## JSON

```json
{
  "key": "",
  "other": "val"
}
```

vim:ft=markdown
