crates/config/tests/snapshots/block_string_0_literal_clip_emptyln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-clip-emptyln-eof

## Input

```mical
key |


```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
