crates/config/tests/snapshots/block_string_0_literal_clip_wsln_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-clip-wsln-eof

## Input

```mical
key |
 

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
