crates/config/tests/snapshots/block_string_0_literal_keep_none_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-0-literal-keep-none-eof

## Input

```mical
key |+

```

## JSON

```json
{
  "key": ""
}
```

vim:ft=markdown
